tests/org.eclipse.php.core.tests/workspace/errors/php73/invalidHeredocIndentation1.pdtt
--TEST--
Bug 537608 - PHP 7.3 Support
--FILE--
<?php
echo <<<EOF
Comment1
Comment2
	 	EOF;
?>
--EXPECT--
[line=5, start=36, end=39] Invalid indentation - tabs and spaces cannot be mixed